# pdfo

./: .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG.txt  LICENCE.txt  README.md  README_mat.md  README_py.md  README_py.txt  README_py_win.txt  meson.build  pyproject.toml  setup.m  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/actions/doc/: build.sh
.github/actions/spelling/: allow.txt  excludes.txt  patterns.txt
.github/workflows/: build.yml  build_wheels.yml  doc.yml  gh-pages.yml  pypi.yml  spelling.yml  wheels.yml
build_tools/: build_support.py
build_tools/github/: build_source.sh  build_wheels.sh  download_anaconda.sh  repair_windows_wheels.sh  upload_anaconda.sh
doc/: Makefile  requirements.txt
doc/source/: conf.py  index.rst  license.rst
doc/source/_static/: pdfo.css
doc/source/_static/logo/: Makefile  logo.tex
doc/source/_templates/autosummary/: attribute.rst  base.rst  class.rst  method.rst  module.rst
doc/source/python/: index.rst  optimizers.rst  utils.rst
doc/source/user/: index.rst  installation.rst  issues.rst  references.rst  releases.rst  usage.rst
doc/source/user/installation/: index.rst  matlab.rst  python.rst
doc/source/user/usage/: index.rst  matlab.rst  python.rst
fsrc/: pdfoconst.F
fsrc/bobyqa/: README.txt  prelim.f
fsrc/classical/bobyqa/: README.txt  prelim.f
fsrc/classical/cobyla/: README.txt
fsrc/classical/lincoa/: README.txt  lincoa.f
fsrc/classical/newuoa/: README.txt  bigden.f
fsrc/classical/uobyqa/: README.txt
fsrc/cobyla/: README.txt  cobylb.f
fsrc/lincoa/: README.txt  lincoa.f  lincob.f
fsrc/newuoa/: README.txt  bigden.f  newuob.f
fsrc/uobyqa/: README.txt  uobyqb.f
matlab/examples/: rosenbrock_example.m  testpdfo.m
matlab/interfaces/: bobyqa.m  cobyla.m  lincoa.m  newuoa.m  pdfo.m  uobyqa.m
matlab/interfaces/private/: mystrjoin.m  package_info.m  postpdfo.m  prepdfo.m  project.m
matlab/mex_gateways/: bobyqa-interface.F  cobyla-interface.F  gethuge.F  lincoa-interface.F  newuoa-interface.F  uobyqa-interface.F
matlab/mex_gateways/classical/: bobyqa-interface.F  cobyla-interface.F  lincoa-interface.F  newuoa-interface.F  uobyqa-interface.F
python/: MANIFEST.in  meson.build  pyproject.toml
python/build_tools/: cibw_before_build_macos.sh  cibw_test_command.sh
python/examples/: rosenbrock.py
python/interfaces/pdfo/: __init__.py  _bobyqa.py  _cobyla.py  _dependencies.py  _lincoa.py  _newuoa.py  _pdfo.py  _uobyqa.py
python/interfaces/pdfo/tests/: test_pdfo.py
python/pdfo/: __init__.py  _bobyqa.py  _cobyla.py  _common.py  _dependencies.py  _lincoa.py  _min_dependencies.py  _newuoa.py  _pdfo.py  _settings.py  _uobyqa.py  bobyqa.py  cobyla.py  common.py  lincoa.py  meson.build  newuoa.py  pdfo.py  setup.py  uobyqa.py
python/pdfo/tests/: __init__.py  meson.build  test_pdfo.py
python/py_gateways/: bobyqa-interface.pyf  bobyqa.f90  cobyla-interface.pyf  cobyla.f90  gethuge-interface.pyf  gethuge.f90  lincoa-interface.pyf  lincoa.f90  newuoa-interface.pyf  newuoa.f90  pdfoconst-interface.pyf  uobyqa-interface.pyf  uobyqa.f90
python/py_gateways/classical/: bobyqa-interface.pyf  bobyqa.f90  cobyla-interface.pyf  cobyla.f90  lincoa-interface.pyf  lincoa.f90  newuoa-interface.pyf  newuoa.f90  uobyqa-interface.pyf  uobyqa.f90
tools/: build_support.py
tools/github/: build_sdist.sh  build_wheels.sh  cibw_before_build.sh  cibw_before_build_windows.sh  cibw_repair_wheel_command_windows.sh  cibw_repair_windows_wheels.sh  download_anaconda.sh  test_sdist.sh  test_source.sh
tools/wheels/: cibw_before_build_macos.sh  cibw_before_build_windows.sh
