[build-system]
requires = [
    "setuptools",
    "wheel",
    "oldest-supported-numpy",
]

[tool.cibuildwheel]
build-verbosity = "3"
before-build = "bash {project}/build_tools/github/cibw_before_build.sh {project}"
before-test = "python -m pip install setuptools wheel numpy"
test-command = "bash {project}/build_tools/github/cibw_test_command.sh {project}"

[tool.cibuildwheel.macos]
archs = "x86_64 arm64"
test-skip = "*_arm64 *_universal2:arm64"
repair-wheel-command = [
    "DYLD_LIBRARY_PATH=/usr/local/gfortran/lib delocate-listdeps {wheel}",
    "DYLD_LIBRARY_PATH=/usr/local/gfortran/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}"
]

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "bash build_tools/github/cibw_repair_windows_wheels.sh {wheel} {dest_dir}"
