[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.12.1",
    "wheel",
    "oldest-supported-numpy; python_version<='3.8'",
    "numpy>=2.0.0; python_version>'3.8'",
]

[project]
name = "pdfo"
description = "Powell's Derivative-Free Optimization solvers"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENCE.txt"}
authors = [
    {name = "Tom M. Ragonneau and Zaikun Zhang", email = "pdfocode@gmail.com"},
]
maintainers = [
    {name = "Tom M. Ragonneau", email = "tom.ragonneau@polyu.edu.hk"},
    {name = "Zaikun Zhang", email = "zaikun.zhang@polyu.edu.hk"},
]
keywords = [
    "blackbox-optimization",
    "constrained-optimization",
    "derivative-free-optimization",
    "hyperparameter-optimization",
    "nonlinear-optimization",
    "numerical-optimization",
    "optimization",
    "optimization-algorithms",
    "optimization-methods",
    "optimization-tools",
    "simulation-based-optimization",
    "unconstrained-optimization",
    "zeroth-order-optimization",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Fortran",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.17.0",
    "scipy>=1.10.0",
]
dynamic = ["version"]

[project.optional-dependencies]
doc = [
    "matplotlib==3.9.0",
    "numpydoc==1.7.0",
    "pydata-sphinx-theme==0.15.4",
    "Sphinx==7.3.7",
    "sphinxcontrib-googleanalytics==0.4",
    "sphinx-copybutton==0.5.2",
    "sphinx-favicon==1.0.1",
]

[project.urls]
homepage = "https://www.pdfo.net"
documentation = "https://www.pdfo.net"
source = "https://github.com/pdfo/pdfo"
download = "https://www.pdfo.net/docs.html#releases"
tracker = "https://github.com/pdfo/pdfo/issues"

[tool.cibuildwheel]
build-verbosity = "3"
test-command = "bash {project}/python/build_tools/cibw_test_command.sh"

[tool.cibuildwheel.linux]
manylinux-i686-image = "manylinux2014"
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.macos]
before-build = "bash {project}/python/build_tools/cibw_before_build_macos.sh"

[tool.cibuildwheel.windows]
repair-wheel-command = "bash python/build_tools/cibw_repair_wheel_command_windows.sh {wheel} {dest_dir}"

[[tool.cibuildwheel.overrides]]
select = "*-win_amd64"
environment = { PKG_CONFIG_PATH="c:/opt/64/lib/pkgconfig" }
